fix: Align position of username and userscope

--- a/exam_frontend/src/components/Navbar/navbar.module.css
+++ b/exam_frontend/src/components/Navbar/navbar.module.css
@@ -1,6 +1,34 @@
-.button-components{
-    display: flex;
-    justify-content: space-around;
-    gap: 10px;
-    /* background-color: yellow; */
-  }
+.button-components {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+  /* background-color: yellow; */
+}
+
+.username-container {
+  display: flex; /* Use flexbox to align items */
+  flex-direction: column;
+  position: relative;
+  top: -15px;
+  align-items: center;
+  height: fit-content;
+}
+
+.username {
+  font-size: small;
+  font-family: "Poppins", sans-serif;
+  text-transform: capitalize;
+  padding: 0;
+  height: 10px;
+  margin: 0;
+}
+
+.userscope {
+  font-size: x-small;
+  font-family: "Poppins", sans-serif;
+  text-transform: capitalize;
+  padding: 0;
+  padding-top: 2px;
+  /* height: 5px; */
+  /* margin-top: 5px; */
+}
